# swagger/survey-specs/src/test/resources/api-spec.yaml
@@ -1,5 +1,5 @@
 ---
-swagger: "2.0"
+swagger: '2.0'
 info:
   description: "HEIG-VD AMT course Survey microservice\n"
   version: "1.0.0"
@@ -38,8 +38,6 @@ paths:
       operationId: "addSurvey"
       consumes:
       - "application/json"
-      produces:
-      - "application/json"
       parameters:
       - in: "body"
         name: "body"
@@ -49,10 +47,13 @@ paths:
           $ref: "#/definitions/Survey"
       responses:
         201:
-          description: "Return the id of the created survey"
-          schema:
-            type: "string"
-            example: "87fd8b129..."
+          description: "Return a header containing the url to get the new survey and his creation timestamp"
+          headers:
+            location:
+              type: string
+            lastModified:
+              type: string
+              format: datetime
         405:
           description: "Invalid input"
   /surveys/{surveyId}:
@@ -83,14 +84,22 @@ paths:
       tags:
       - "survey"
       summary: "Modify a survey"
-      description: "Either chanage a survey's questions if current state is 'draft' or change his current state"
+      description: "Either change a survey's questions if current state is 'draft' or change his current state"
       operationId: "modifySurvey"
+      consumes:
+      - "application/json"
       parameters:
-      - name: "surveyId"
-        in: "path"
+      - in: "path"
+        name: "surveyId"
         description: "ID of survey to patch"
         required: true
         type: "string"
+      - in: "body"
+        name: "body"
+        description: "Survey"
+        required: true
+        schema:
+          $ref: "#/definitions/Survey"
       responses:
         200:
           description: "successful operation"
